--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
       rel="stylesheet"
     />
     <!--====================UNICONS=========================-->
-
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
     <title>Portfolio Website</title>
   </head>
   <body>
