--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
-    <title>Portfolio Website</title>
+    <title>Immersive Game Experiences | Shamsul Arifin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
